--- a/frontenddevelopment.html
+++ b/frontenddevelopment.html
@@ -373,11 +373,12 @@
                                 <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                                 <div class="socials-text">Follow Us</div>
                                 <ul class="socials">
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
+                                    <!-- <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/codedchalk" target="_blank">Db</a></span></li>
                                     <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/codedchalkdesign" target="_blank">Tw</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk.ro" target="_blank">Fb</a></span></li>
-                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk.themes/">In</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/codedchalk" target="_blank">Be</a></span></li> -->
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/company/codedchalk/" target="_blank">Ln</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/codedchalk/" target="_blank">Fb</a></span></li>
+                                    <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/codedchalk/" target="_blank">In</a></span></li>
                                 </ul>
                             </div>
 
