--- a/android.html
+++ b/android.html
@@ -330,6 +330,9 @@
                                         <div class="email-box has-animation" data-delay="150">
                                             <input name="_replyto" type="text" placeholder="Your Email"><label class="input_label"></label>
                                         </div>
+                                        <div class="contact-box has-animation" data-delay="100">
+                                            <input name="phone" type="text" placeholder="Your Phone Number"><label class="input_label"></label>
+                                        </div>
                                         <div class="message-box has-animation" data-delay="100">
                                             <textarea name="message" cols="40" rows="4" placeholder="Tell Us Your Queries"></textarea><label class="input_label slow"></label>
                                         </div>
