--- a/android.html
+++ b/android.html
@@ -186,14 +186,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
+                                            Demonstrate your course attendance with a certificate signed by the teacher.
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knwoledge
+                                            Share Knowledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -239,7 +239,7 @@
                                         <p class="has-animation">
                                             Section 1: Introduction
                                         </p>
-                                        <p class="has-animation">Section2:Install and Setup Software for Android App Development
+                                        <p class="has-animation">Section 2: Install and Setup Software for Android App Development
                                         </p>
                                         <p class="has-animation">Section 3: Install and Setup
                                         </p>
@@ -247,8 +247,8 @@
                                         </p>
                                         <p class="has-animation">Section 5: Learn Java Programming From Scratch!
                                         </p>
-                                        <p class="has-animation">Section 6: Java Advanced </p>
-                                        <p class="has-animation">Concepts Section 7: Java Programming Advanced Concepts-Inheritance and DataStructure
+                                        <p class="has-animation">Section 6: Java Advanced Concepts </p>
+                                        <p class="has-animation">Section 7: Java Programming Advanced Concepts-Inheritance and DataStructure
                                         </p>
                                         <p class="has-animation">Section 8: Android App Development Tools
                                         </p>
@@ -261,13 +261,13 @@
                                         <p class="has-animation">Section 12: Debugging
                                         </p>
                                         <p class="has-animation">Section 13: What Are Activities And How to work with Navigation - Java / Android</p>
-                                        <p class="has-animation">Section 14: Recycler Views - Listviews alternative - Introduction</p>
-                                        <p class="has-animation">Section 15: User Interface - Android Layouts XML</p>
-
+                                       
 
                                     </div>
 
                                     <div class="one_half last">
+                                        <p class="has-animation">Section 14: Recycler Views - Listviews alternative - Introduction</p>
+                                        <p class="has-animation">Section 15: User Interface - Android Layouts XML</p>
 
                                         <p class="has-animation">
                                             Section 16: Android Media Player
