--- a/dotnet.html
+++ b/dotnet.html
@@ -102,9 +102,9 @@
                                     <div class="inner">
 
                                         <div class="hero-title">
-                                            <span>M</span>
+                                            <!-- <span>M</span>
                                             <span>S</span>
-                                            <span></span>
+                                            <span></span> -->
                                             <span>.</span>
 
                                             <span>N</span>
@@ -182,14 +182,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
+                                            Demonstrate your course attendance with a certificate signed by the teacher.
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knwoledge
+                                            Share Knowledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -227,7 +227,7 @@
 
                                     <h2 class="has-mask">This is What we are going to Dive into
                                     </h2>
-                                    Asp.Net Mvc, Asp.Net Core Mvc, Repository Pattern, Web Api, Asp.Net Identity, Entity Framework, Cross Platform Web Apps
+                                    
                                     <hr>
 
                                     <div class="one_half">
@@ -255,15 +255,14 @@
                                         <p class="has-animation">Section 17: ASP.Net Identity</p>
                                         <p class="has-animation">Section 18: Filters & Built In Filters</p>
                                         <p class="has-animation">Section 19: Security</p>
-                                        <p class="has-animation">Section 20: Exception Handling in MVC</p>
+                                       
 
 
                                     </div>
 
                                     <div class="one_half last">
-
-                                        <p class="has-animation">
-                                            Section 21: Service Pattern & Repository Pat-
+                                        <p class="has-animation">Section 20: Exception Handling in MVC</p>
+                                        <p class="has-animation">Section 21: Service Pattern & Repository Pattern
                                         </p>
                                         <p class="has-animation">
                                             Section 22: State Management
@@ -278,7 +277,7 @@
                                             Section 25: Sample Project - StackOverflow Clone
                                         </p>
                                         <p class="has-animation">
-                                            Section 26: Create & Examine Our First ASP-NET Core 1.0 Web & Console App
+                                            Section 26: Create & Examine Our First ASP.NET Core 1.0 Web & Console App
 
                                         </p>
                                         <p class="has-animation"> Section 27: MVC & MVC 6 Features & RC2 to 1.0 Migration
@@ -296,7 +295,7 @@
 
                                         <p class="has-animation">
 
-                                            Section 32: Angular & . Net Core Integration
+                                            Section 32: Angular & .Net Core Integration
                                         </p>
                                         <p class="has-animation">
 
