--- a/frontenddevelopment.html
+++ b/frontenddevelopment.html
@@ -201,14 +201,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
+                                            Demonstrate your course attendance with a certificate signed by the teacher.
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knwoledge
+                                            Share Knowledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -251,51 +251,44 @@
 
                                     <div class="one_half">
 
-                                        <p class="has-animation">
-                                            introduction to course content
-                                        </p>
-                                        <p class="has-animation">Section 1: Modern Web Development </p>
-                                        <p class="has-animation">Section2:Learn HTML fundamentals of website</p>
-                                        <p class="has-animation">Section3:Learn CSS fundamentals of website development</p>
-                                        <p class="has-animation">Section4:CSS Next Steps</p>
-                                        <p class="has-animation">Section5:JavaScript creating interactive Dynamic Content</p>
-                                        <p class="has-animation">Section6:Writing JavaScript code</p>
-                                        <p class="has-animation">Section7:JavaScript in Action get Dynamic and Interactive</p>
-                                        <p class="has-animation">Section8:JavaScript fundamentals</p>
-                                        <p class="has-animation">Section9:JavaScript JSON and AJAX</p>
-                                        <p class="has-animation">Section10:Bootstrap4</p>
-                                        <p class="has-animation">Section12:jQUERY easy AJAX</p>
-                                        <p class="has-animation">Section13:jQuery Traversing</p>
-                                        <p class="has-animation">Section14:jQuery Styling</p>
-                                        <p class="has-animation">Section15:jQUERY Effects and Animations</p>
-                                        <p class="has-animation"></p>
-
-
+                                        <p class="has-animation">Section 1: Modern Web Development introduction to course content </p>
+                                        <p class="has-animation">Section 2: Learn HTML fundamentals of website</p>
+                                        <p class="has-animation">Section 3: Learn CSS fundamentals of website development</p>
+                                        <p class="has-animation">Section 4: CSS Next Steps</p>
+                                        <p class="has-animation">Section 5: JavaScript creating interactive Dynamic Content</p>
+                                        <p class="has-animation">Section 6: Writing JavaScript code</p>
+                                        <p class="has-animation">Section 7: JavaScript in Action get Dynamic and Interactive</p>
+                                        <p class="has-animation">Section 8: JavaScript fundamentals</p>
+                                        <p class="has-animation">Section 9: JavaScript JSON and AJAX</p>
+                                        <p class="has-animation">Section 10: Bootstrap4</p>
                                     </div>
-
                                     <div class="one_half last">
-
+                                        <p class="has-animation">Section 11: jQUERY for quicker coding</p>
+                                        <p class="has-animation">Section 12: jQUERY easy AJAX</p>
+                                        <p class="has-animation">Section 13: jQuery Traversing</p>
+                                        <p class="has-animation">Section 14: jQuery Styling</p>
+                                        <p class="has-animation">Section 15: jQUERY Effects and Animations</p>
                                         <p class="has-animation">
-                                            Section16:jQueryAJAX
+                                            Section 16: jQuery AJAX
                                         </p>
                                         <p class="has-animation">
-                                            Section17:Bringing it together HTML CSS and jQuery
+                                            Section 17: Bringing it together HTML CSS and jQuery
                                         </p>
                                         <p class="has-animation">
-                                            Section18:SASS Basics
+                                            Section 18: SASS Basics
                                         </p>
                                         <p class="has-animation">
-                                            Section19:SASS Advanced
+                                            Section 19: SASS Advanced
                                         </p>
                                         <p class="has-animation">
-                                            Section20:Deploying on Server
+                                            Section 20: Deploying on Server
                                         </p>
                                         <p class="has-animation">
-                                            Section21:Website Optimization
+                                            Section 21: Website Optimization
                                         </p>
                                         <p class="has-animation">
-                                            Section22:Scheme a Markup</p>
-
+                                            Section 22: Scheme a Markup</p>
+                                            
 
                                     </div>
                                 </div>
