--- a/ios.html
+++ b/ios.html
@@ -129,7 +129,7 @@
 
                                     <hr>
 
-                                    <h2 class="has-mask">The most comprehensive course on ios Development - become a master of app Development
+                                    <h2 class="has-mask">The most comprehensive course on iOS development - become a master of app development
                                     </h2>
 
                                     <div style="display: flex; justify-content: space-between; padding-right: 20px;">
@@ -180,14 +180,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
+                                            Demonstrate your course attendance with a certificate signed by the teacher.
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knwoledge
+                                            Share Knowledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -230,60 +230,33 @@
 
                                     <div class="one_half">
 
-                                        <p class="has-animation">
-                                            Section 1: Introduction
+                                        <p class="has-animation">Section 1: Getting Started With iOS 10 & Swift 3
                                         </p>
-                                        <p class="has-animation">Section 2: Install and Setup Software for Android App Development
-                                        </p>
-                                        <p class="has-animation">Section 3: Install and Setup
-                                        </p>
-                                        <p class="has-animation">Section 4: Android Resources and Theoretical Guidelines
-                                        </p>
-                                        <p class="has-animation">Section 5: Learn Java Programming From Scratch!
-                                        </p>
-                                        <p class="has-animation">Section 6: Java Advanced </p>
-                                        <p class="has-animation">Concepts Section 7: Java Programming Advanced Concepts
-                                        </p>
-                                        <p class="has-animation">Section8:iOS Hot New Features
-                                        </p>
+                                        <p class="has-animation">Section 2: Learn to code with Swift</p>
+                                        <p class="has-animation">Section 3: Version Control With Git & Github</p>
+                                        <p class="has-animation">Section 4: Foundational iOS</p>
+                                        <p class="has-animation">Section 5: Working With REST & Web Requests on iOS 10 & Swift 3</p>
+                                        <p class="has-animation">Section 6: Data Persistence & Core Data</p>
+                                        <p class="has-animation">Section 7: Protocol Oriented Programming and Advanced Swift</p>
+                                        <p class="has-animation">Section 8: iOS Hot New Features</p>
                                         <p class="has-animation">Section 9: Building Full Stack Apps With Firebase</p>
-                                        <p class="has-animation">Section 10: Maps, GPS, Geolocation, Pokemon & Firebase
-                                        </p>
-                                        <p class="has-animation">Section 11: Creating A Social Network With Firebase
-
-                                        </p>
-                                        <p class="has-animation">Section 12: Intermediate: Creating a Snapchat Clone With Firebase
-                                        </p>
-                                        <p class="has-animation">Section 13: Designing Mobile Apps With Sketch</p>
-                                        <p class="has-animation">Section 14: Designing A Chat App in Sketch</p>
-                                        <p class="has-animation">Section 15: Designing An Social Media App in Sketch</p>
-
+                                        <p class="has-animation">Section 10: Maps, GPS, Geolocation, Pokemon & Firebase</p>
+                                        <p class="has-animation">Section 11: Creating A Social Network With Firebase</p>
+                                       
 
                                     </div>
 
                                     <div class="one_half last">
-
-                                        <p class="has-animation">
-                                            Section16: Objective-C
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 17: A Deeper Look Into Objective-C Sketch
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 18: Advanced Objective-C
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 19: Objective-C Building A Tutorial & Youtube App
-
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 20: Design, Provisioning, Testing, and iOS App Submission
-
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 21: Bonus: Devslopes Online Bootcamp Sketch Classroom Sessions
-
-                                        </p>
+                                        <p class="has-animation">Section 12: Intermediate: Creating a Snapchat Clone With Firebase</p>
+                                        <p class="has-animation">Section 13: Designing Mobile Apps With Sketch</p>
+                                        <p class="has-animation">Section 14: Designing A Chat App in Sketch</p>
+                                        <p class="has-animation">Section 15: Designing An Social Media App in Sketch</p>
+                                        <p class="has-animation">Section 16: Objective-C</p>
+                                        <p class="has-animation">Section 17: A Deeper Look Into Objective-C Sketch</p>
+                                        <p class="has-animation">Section 18: Advanced Objective-C</p>
+                                        <p class="has-animation">Section 19: Objective-C Building A Tutorial & Youtube App</p>
+                                        <p class="has-animation">Section 20: Design, Provisioning, Testing, and iOS App Submission</p>
+                                        <p class="has-animation">Section 21: Bonus: Devslopes Online Bootcamp Sketch Classroom Sessions</p>
 
 
                                     </div>
