--- a/reactjs.html
+++ b/reactjs.html
@@ -182,14 +182,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
+                                            Demonstrate your course attendance with a certificate signed by the teacher.
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knwoledge
+                                            Share Knowledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -235,7 +235,7 @@
                                         <p class="has-animation">
                                             Section I: Getting Started
                                         </p>
-                                        <p class="has-animation">Section 2: Refreshing Next Generation JavaS- cript (Optional)
+                                        <p class="has-animation">Section 2: Refreshing Next Generation Java-Script (Optional)
                                         </p>
                                         <p class="has-animation">Section 3: Understanding the Base Features & Syntax
                                         </p>
@@ -249,50 +249,30 @@
                                         </p>
                                         <p class="has-animation">Section 9: Reaching out to the Web (Http / Ajax)</p>
                                         <p class="has-animation">Section 10: Burger Builder </p>
-                                        <p class="has-animation">Section Il: Multi-Page-FeeIing in a Sin- gle-Page-App: Routing
+                                        <p class="has-animation">Section 11: Multi-Page-FeeIing in a Sin- gle-Page-App: Routing
                                         </p>
                                         <p class="has-animation">Section 12: Adding Routing to Burger Project</p>
                                         <p class="has-animation">Section 13: Forms and Form Validation</p>
-                                        <p class="has-animation">Section 14: Redux</p>
-                                        <p class="has-animation">Section 15: Adding Redux to our Project</p>
+                                        
 
 
                                     </div>
 
                                     <div class="one_half last">
-
-                                        <p class="has-animation">
-                                            Section 16: Course Project - Forms
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 17: Using Pipes to Transform Output
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 18: Making Http Requests
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 19: Course Project - Http
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 20: Authentication & Route Protection in Angular
-
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 21: Dynamic Components
-                                        </p>
-                                        <p class="has-animation"> Section 22: Angular Modules & Optimizing</p>
+                                        <p class="has-animation">Section 14: Redux</p>
+                                        <p class="has-animation">Section 15: Adding Redux to our Project</p>
+                                        <p class="has-animation">Section 16: Course Project - Forms</p>
+                                        <p class="has-animation">Section 17: Using Pipes to Transform Output</p>
+                                        <p class="has-animation">Section 18: Making Http Requests</p>
+                                        <p class="has-animation">Section 19: Course Project - Http</p>
+                                        <p class="has-animation">Section 20: Authentication & Route Protection in Angular</p>
+                                        <p class="has-animation">Section 21: Dynamic Components</p>
+                                        <p class="has-animation">Section 22: Angular Modules & Optimizing</p>
                                         <p class="has-animation">Section 23: Deploying an Angular App</p>
-                                        <p class="has-animation"> Section 24: Bonus: Working with NgRx in our Project
-                                        </p>
+                                        <p class="has-animation">Section 24: Bonus: Working with NgRx in our Project                                        </p>
                                         <p class="has-animation">Section 25: Bonus: Angular Universal</p>
-                                        <p class="has-animation"> Section 26: Angular Animations</p>
-
-
-
-                                        <p class="has-animation">
-
-                                            Section 27: Adding Offline Capabilities
-                                        </p>
+                                        <p class="has-animation">Section 26: Angular Animations</p>
+                                        <p class="has-animation">Section 27: Adding Offline Capabilities</p>
 
                                     </div>
                                 </div>
