--- a/uiandux.html
+++ b/uiandux.html
@@ -183,14 +183,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
+                                            Demonstrate your course attendance with a certificate signed by the teacher.
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knwoledge
+                                            Share Knowledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -249,17 +249,13 @@
                                         <p class="has-animation">7. Crop and resize images using various settings.</p>
                                         <p class="has-animation">8. Use Bridge with Photoshop.</p>
                                         <p class="has-animation">9. Rearrange, group, and adjust settings of layers.</p>
-                                        <p class="has-animation">10. Adjust layer blending modes.</p>
-
                                         <p class="has-animation"></p>
                                         <p class="has-animation"></p>
 
-
-
-                                    </div>
+                                     </div>
 
                                     <div class="one_half last">
-
+                                        <p class="has-animation">10. Adjust layer blending modes.</p>
                                         <p class="has-animation">11. Create and apply a variety of adjustment layers.</p>
                                         <p class="has-animation">12. Create and apply various layer styles.</p>
                                         <p class="has-animation">13. Describe the various selection tools and apply them in various ways.</p>
@@ -286,9 +282,8 @@
                                     <hr>
 
                                     <div class="one_half">
-                                        <p class="has-animation">1 Become a UX designer.</p>
-                                        <p class="has-animation">2. You will be able to start earning money from your XD Skills.
-                                        </p>
+                                        <p class="has-animation">1. Become a UX designer.</p>
+                                        <p class="has-animation">2. You will be able to start earning money from your XD Skills.</p>
                                         <p class="has-animation">3. You will be able to add UX designer to your CV.</p>
                                         <p class="has-animation">4. Build a UX project from beginning to end.</p>
                                         <p class="has-animation">5. Become a UI designer.</p>
@@ -297,18 +292,17 @@
                                         <p class="has-animation">8. You will have a project of your own to add to your portfolio.</p>
                                         <p class="has-animation">9. 93 lectures of well-structured, step by step content.</p>
                                         <p class="has-animation">10. Learn to design websites & mobile phone apps.</p>
-                                        <p class="has-animation">11. Work with fonts & colors.</p>
-                                        <p class="has-animation">12. Prototypeyourdesignswithinteractions.</p>
+                                        
                                     </div>
                                     <div class="one_half last">
-
+                                        <p class="has-animation">11. Work with fonts & colors.</p>
+                                        <p class="has-animation">12. Prototypeyourdesignswithinteractions.</p>
                                         <p class="has-animation">13. Test on mobile phones.</p>
-                                        <p class="has-animation">
-                                            14. You'll create realistic prototype complete with micro interactions.</p>
+                                        <p class="has-animation">14. You'll create realistic prototype complete with micro interactions.</p>
                                         <p class="has-animation">15. Send your designs for feedback & commenting.</p>
                                         <p class="has-animation">16. Export production ready assets.</p>
                                         <p class="has-animation">17. Create your first UX brief & persona.</p>
-                                        <p class="has-animation">18.Createquickwireframes.</p>
+                                        <p class="has-animation">18. Createquickwireframes.</p>
                                         <p class="has-animation">19. How to use premade UI kits.</p>
                                         <p class="has-animation">20. Learn professional workflow tricks & shortcuts.</p>
                                         <p class="has-animation">21. You will get the finished files so you never fall behind.</p>
@@ -343,18 +337,23 @@
                                         <p class="has-animation">5. Under stand how to design ford if ferent device view ports.</p>
                                         <p class="has-animation">6. How to leve rage tools to ensure pixel perfect design work.</p>
                                         <p class="has-animation">7. How to save tons of time by usings hared styles,symbols,andlibraries.</p>
-                                        <p class="has-animation">8.How to export and hand off the assets developers need to build area lapp.
+                                        <p class="has-animation">8. How to export and hand off the assets developers need to build area lapp.
                                         </p>
-                                        <p class="has-animation">9.How a good UI(userinterface) influences good UX(user experience).</p>
-                                        <p class="has-animation">10.Be a professional designer who creates better apps faster.</p>
-                                        <p class="has-animation">11.Download a bleexer cisefiles.</p>
-                                        <p class="has-animation">12.Forum support from meand there stof the BYOL crew.</p>
-                                        <p class="has-animation">13.All the techniques used by UX professionals.</p>
-                                        <p class="has-animation">14.Build a mobile app prototype that responses to voice commands.</p>
-                                        <p class="has-animation">15.You will be able to talk correctly with other UX design professionals..</p>
-                                        <p class="has-animation">16.You'll learn how to choose colors.</p>
-                                        <p class="has-animation">17.You'll learn how topick the correct fonts.</p>
-                                        <p class="has-animation">18.You'll be able to send your finished work too ther professional sin the correct formats..</p>
+                                        <p class="has-animation">9. How a good UI(userinterface) influences good UX(user experience).</p>
+                                        <p class="has-animation"></p>   
+                                    </div>
+                                    <div class="one_half last">
+                                        <p class="has-animation">10. Be a professional designer who creates better apps faster.</p>
+                                        <p class="has-animation">11. Download a bleexer cisefiles.</p>
+                                        <p class="has-animation">12. Forum support from meand there stof the BYOL crew.</p>
+                                        <p class="has-animation">13. All the techniques used by UX professionals.</p>
+                                        <p class="has-animation">14. Build a mobile app prototype that responses to voice commands.</p>
+                                        <p class="has-animation">15. You will be able to talk correctly with other UX design professionals..</p>
+                                        <p class="has-animation">16. You'll learn how to choose colors.</p>
+                                        <p class="has-animation">17. You'll learn how topick the correct fonts.</p>
+                                        <p class="has-animation">18. You'll be able to send your finished work too ther professional sin the correct formats..</p>
+                                    
+                                        <p class="has-animation"></p>
                                     </div>
 
 
