--- a/angular.html
+++ b/angular.html
@@ -134,7 +134,7 @@
 
                                     <hr>
 
-                                    <h2 class="has-mask">Master Angular (formerly "Angular 2")and build awesome,reactive web app with the successor of Angular.js </h2>
+                                    <h2 class="has-mask">Master Angular (formerly "Angular 2") and build awesome, reactive web app with the successor of Angular.js </h2>
 
                                     <div style="display: flex; justify-content: space-between; padding-right: 20px;">
                                         <div>
@@ -184,14 +184,14 @@
                                             Certificate
                                         </h6>
                                         <p class="has-animation">
-                                            Demonstrate your course attendance with a certificate signed by the teacher. Get it with your
+                                            Demonstrate your course attendance with a certificate signed by the teacher.
                                         </p>
 
                                     </div>
 
                                     <div class="one_half last">
                                         <h6>
-                                            Share Knwoledge
+                                            Share Knowledge
                                         </h6>
                                         <p class="has-animation">
                                             Enjoy learning from home without a set schedule. You set your own timetable.
@@ -229,14 +229,12 @@
 
                                     <h2 class="has-mask">This is What we are going to Dive into
                                     </h2>
-                                    Master Angular (formerly "Angular 2")and build awesome,reactive web app with the successor of Angular.js
+                                    Master Angular (formerly "Angular 2") and build awesome, reactive web app with the successor of Angular.js
                                     <hr>
 
                                     <div class="one_half">
 
-                                        <p class="has-animation">
-                                            Section 1: Getting Started
-                                        </p>
+                                        <p class="has-animation">Section 1: Getting Started</p>
                                         <p class="has-animation">Section 2: The Basics</p>
                                         <p class="has-animation">Section 3: Course Project- The Basics</p>
                                         <p class="has-animation">Section 4: Debugging</p>
@@ -249,45 +247,26 @@
                                         <p class="has-animation">Section 12: Course Project - Routing</p>
                                         <p class="has-animation">Section 13: Under standing Observables</p>
                                         <p class="has-animation">Section 14: Course Project- Observables</p>
-                                        <p class="has-animation">Section 15: Handling Forms in Angular Apps</p>
+                                        
                                         <p class="has-animation"></p>
 
 
                                     </div>
 
                                     <div class="one_half last">
-
-                                        <p class="has-animation">
-                                            Section 16: Course Project - Forms
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 17: Using Pipes to Transform Output
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 18: Making Http Requests
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 19: Course Project - Http
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 20: Authentication & Route Protection in Angular
-                                        </p>
-                                        <p class="has-animation">
-                                            Section 21: Dynamic Components
-                                        </p>
-                                        <p class="has-animation"> Section 22: Angular Modules & Optimizing</p>
-                                        <p class="has-animation"> Section 23: Deployingan Angular App</p>
-                                        <p class="has-animation"> Section 24: Bonus: Working with NgRxinour Project
-                                        </p>
-                                        <p class="has-animation"> Section 25: Bonus: Angular Universal</p>
-                                        <p class="has-animation"> Section 26: Angular Animations</p>
-
-
-
-                                        <p class="has-animation">
-
-                                            Section 27: Adding Offline Capabilities
-                                        </p>
+                                        <p class="has-animation">Section 15: Handling Forms in Angular Apps</p>
+                                        <p class="has-animation">Section 16: Course Project - Forms</p>
+                                        <p class="has-animation">Section 17: Using Pipes to Transform Output</p>
+                                        <p class="has-animation">Section 18: Making Http Requests</p>
+                                        <p class="has-animation">Section 19: Course Project - Http</p>
+                                        <p class="has-animation">Section 20: Authentication & Route Protection in Angular</p>
+                                        <p class="has-animation">Section 21: Dynamic Components</p>
+                                        <p class="has-animation">Section 22: Angular Modules & Optimizing</p>
+                                        <p class="has-animation">Section 23: Deployingan Angular App</p>
+                                        <p class="has-animation">Section 24: Bonus: Working with NgRxinour Project</p>
+                                        <p class="has-animation">Section 25: Bonus: Angular Universal</p>
+                                        <p class="has-animation">Section 26: Angular Animations</p>
+                                        <p class="has-animation">Section 27: Adding Offline Capabilities</p>
 
                                     </div>
                                 </div>
